Cover alignment issue

--- a/src/CoverPage.css
+++ b/src/CoverPage.css
@@ -1,5 +1,6 @@
 .coverContent {
     display: flex;
+    align-items: center;
 
 }
 
